--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.1",
+    "react-google-maps": "^9.4.5",
+    "recompose": "^0.27.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
